--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.11",
+    "axios": "^1.6.8",
     "nuxt": "^3.11.2",
     "quasar": "^2.15.2",
     "vue": "^3.4.21",
